# unicompass

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BIBLE.md  Dockerfile  PRD.md  fly.toml  pyproject.toml  tracer.py
.github/workflows/: deploy.yml
app/: main.py
app/agents/: base_agent.py  judge_agent.py  ntu_agent.py  nus_agent.py  orchestrator.py  registry.py  sit_agent.py  smu_agent.py  suss_agent.py  sutd_agent.py
app/db/: models.py  supabase_client.py
app/routers/: debate.py  profile.py  scholarships.py
app/tools/: cache.py  scraper.py
frontend/: Dockerfile  fly.toml  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/debate/[id]/next-round/: route.ts
frontend/src/app/api/debate/[id]/question/: route.ts
frontend/src/app/api/debate/[id]/stream/: route.ts
frontend/src/app/debate/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/scholarships/: page.tsx
frontend/src/components/: AgentBubble.tsx  DebateStream.tsx  ProfileForm.tsx  ProsConsTable.tsx  ScholarshipCompare.tsx  UniversitySelector.tsx
frontend/src/lib/: api.ts  exportPdf.ts  types.ts  universities.ts
migrations/: 001_create_tables.sql  002_add_resume_fields.sql  003_seed_scholarships.sql
